fixed the gap on the right by adding more decimals, i think i could probably refactor the stripe placement to be neater, codewise

--- a/stripes.css
+++ b/stripes.css
@@ -1,6 +1,3 @@
-/*
-2.0
-*/
 body {
  margin-top: 0px;
  margin-right: 0px;
@@ -18,60 +15,58 @@ main {
 }
 
 .stripe{
-  width: 11vw;
+  width: 11.11vw;
   height: 100vh; 
   top: 0vh;
   position: absolute;
-  margin-left: -3;
-  margin-right: -3;
-  margin-bottom: -4;
 }
 
 .stripe.move{
   top: -100vh;
 }
 
+/*individual stripes folded below*/
 main .stripe:nth-of-type(1){
   transition: top 1.12s ease-out, background 4s;
 }
 
 main .stripe:nth-of-type(2){
-  left: 11vw;
+  left: 11.11vw;
   transition: top 1.55s ease-out, background 4s;
 }
 
 main .stripe:nth-of-type(3){
-  left: 22vw;
+  left: 22.22vw;
   transition: top 1.4s ease-out, background 4s;
 }
 
 main .stripe:nth-of-type(4){
-  left: 33vw;
+  left: 33.33vw;
   transition: top 1.6s ease-out, background 4s;
 }
 
 main .stripe:nth-of-type(5){
-  left: 44vw;
+  left: 44.44vw;
   transition: top 1.7s ease-out, background 4s;
 }
 
 main .stripe:nth-of-type(6){
-  left: 55vw;
+  left: 55.55vw;
   transition: top 1.5s ease-out, background 4s;
 }
 
 main .stripe:nth-of-type(7){
-  left: 66vw;
+  left: 66.66vw;
   transition: top 1.9s ease-out, background 4s;
 }
 
 main .stripe:nth-of-type(8){
-  left: 77vw;
+  left: 77.77vw;
   transition: top 1.8s ease-out, background 4s;
 }
 
 main .stripe:nth-of-type(9){
-  left: 88vw;
+  left: 88.88vw;
   transition: top 1.75s ease-out, background 4s;
 }
 
@@ -114,7 +109,7 @@ nav .banner{
   letter-spacing: 0.3vw;
 }
 
-
+/*colors folded below*/
 .red{
   background-color: #AF1C08;
 }
@@ -166,8 +161,6 @@ nav .banner{
 .fabulous{
   background-color: #880788;
 }
-
-
 
 section{
   display: none;
